# QtIotSensorsApp

./: CMakeLists.txt  DataBaseManager.cpp  DataBaseManager.h  HomePage.qml  HumidityPage.qml  HumiditySensor.cpp  HumiditySensor.h  Main.qml  TemperaturePage.qml  TemperatureSensor.cpp  TemperatureSensor.h  main.cpp
